# incanel

./: README.md  pyproject.toml
src/: agent.py  interface.py  main.py  sampling.py  scenarios.py
telemetry_agent/: __init__.py  agent.py  interface.py  main.py  sampling.py  scenario_generator.py  scenarios.py
tests/: test_agent.py  test_core.py
